<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
            android:key="theme"
            android:icon="@drawable/ic_pref_palette"
            android:title="@string/pref_theme_title"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="custom_colors"
        android:icon="@drawable/ic_pref_droplet"
        android:title="@string/pref_custom_colors_title"
        android:summary="@string/pref_custom_colors_summary" />

    <Preference
        android:key="bg_pick"
        android:icon="@drawable/ic_pref_image"
        android:title="@string/pref_bg_image_title"
        android:summary="@string/pref_bg_image_summary" />

    <ListPreference
        android:key="bg_dim"
        android:title="@string/pref_bg_dim_title"
        android:entries="@array/hs_entries"
        android:entryValues="@array/hs_values"
        android:defaultValue="medium"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="bg_clear"
        android:title="@string/pref_bg_clear_title"
 />

    <ListPreference
        android:key="split_mode"
        android:title="@string/pref_split_title"
        android:entries="@array/split_entries"
        android:entryValues="@array/split_values"
        android:defaultValue="off"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="key_borders"
        android:title="@string/pref_borders_title"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="narrow_gaps"
        android:title="@string/pref_gaps_title"
        android:defaultValue="false" />

    <SeekBarPreference
        android:key="side_pad_pct"
        android:title="@string/pref_sidepad_title"
        app:min="0"
        android:max="12"
        android:defaultValue="0"
        app:showSeekBarValue="true" />

    <SeekBarPreference
        android:key="bottom_pad_pct"
        android:title="@string/pref_bottompad_title"
        app:min="0"
        android:max="12"
        android:defaultValue="0"
        app:showSeekBarValue="true" />

    <Preference
        android:key="font_pick"
        android:title="@string/pref_font_title"
        android:summary="@string/pref_font_summary" />

    <Preference
        android:key="font_clear"
        android:title="@string/pref_font_clear" />

    <EditTextPreference
        android:key="space_text"
        android:title="@string/pref_space_text_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
