<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
            android:key="glide_typing"
            android:title="@string/pref_glide_title"
            android:summary="@string/pref_glide_summary"
            android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="glide_trail"
        android:title="@string/pref_glide_trail_title"
        android:summary="@string/pref_glide_trail_summary"
        android:defaultValue="true" />


    <ListPreference
        android:key="space_swipe_h"
        android:title="@string/pref_swipe_h_title"
        android:entries="@array/space_h_entries"
        android:entryValues="@array/space_h_values"
        android:defaultValue="cursor"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="space_swipe_v"
        android:title="@string/pref_swipe_v_title"
        android:entries="@array/space_v_entries"
        android:entryValues="@array/space_v_values"
        android:defaultValue="none"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="space_long_press"
        android:title="@string/pref_space_long_title"
        android:entries="@array/space_long_entries"
        android:entryValues="@array/space_long_values"
        android:defaultValue="language"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
